# fibonacci_mod

./: Cargo.toml  README.md
bench/: bench_res.txt
src/: fib_mod.rs  fibonacci_mod.rs  lib.rs  pisano.rs  rand.rs
