[package]
name = "fibonacci_mod"
version = "0.1.0"
edition = "2021"
authors = ["Nikolay Zakirov"]
description = "Fibonacci numbers modulo n"
repository = "https://github.com/NikZak/fibonacci_mod"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["fibonacci", "pisano period", "mod", "modulo", "prime", "gcd"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-prime = "0.4.3"
gcd = "2.3.0"
